--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ bcrypt==3.1.4
 cffi==1.11.2
 decorator==4.1.2
 Django==1.11.7
+django-debug-toolbar==1.9.1
+django-extensions==1.9.8
 enum34==1.1.6
+graphviz==0.8.2
 ipython==5.5.0
 ipython-genutils==0.2.0
 pathlib2==2.3.0
@@ -13,10 +16,14 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 pycparser==2.18
+pydotplus==2.0.2
 Pygments==2.2.0
+pyparsing==2.2.0
 pytz==2017.3
 scandir==1.6
 simplegeneric==0.8.1
 six==1.11.0
+sqlparse==0.2.4
 traitlets==4.3.2
+typing==3.6.2
 wcwidth==0.1.7
